<resources>
    <string name="app_name">EXAMPLE</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Sign In -->


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">로그인</string>
    <string name="signup_email">이메일로으로 회원가입</string>
    <string name="signup_facebook">Facebook으로 회원가입</string>
    <string name="signup_twitter">Twitter으로 회원가입</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

</resources>