<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/signin_layout">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:src="@drawable/logo"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:id="@+id/image_logo"/>

    </LinearLayout>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/signin_layout"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">

        <!-- EditText - Email -->



        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/email_edittext"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EditText - Password -->



        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/password_edittext"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/signin"
            android:theme="@style/ButtonStyle" />

        <Button
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/google_sign_in_button"
            android:text="@string/signup_email"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_google"/>

        <Button
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/facebook_login_button"
            android:text="@string/signup_facebook"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_facebook"/>

        <Button
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:id="@+id/twitter_login_button"
            android:text="@string/signup_twitter"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_twitter"/>
    </LinearLayout>
</RelativeLayout>